--- a/client/src/assets/styles/Skills.css
+++ b/client/src/assets/styles/Skills.css
@@ -1,3 +1,3 @@
-.react-icons {
-    vertical-align: middle;
-  }
+.list-group-item {
+  padding: 0px;
+}
